// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Homework Row renders in progress 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  height: 100%;
  width: 4rem;
  margin-right: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-repeat: no-repeat;
  background-position: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0 6rem 0 1rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 i {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 span {
  word-break: break-all;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 18rem;
  padding-right: 1rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 15.5rem;
  padding-right: 1rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-right: 1rem;
  width: 8rem;
}

.c6 svg.fa-star {
  padding: 3px;
}

.c0 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
}

@media (max-width:749px) {
  .c1 {
    min-width: 100%;
  }
}

@media (max-width:749px) {
  .c3 {
    padding-left: 1.2rem;
  }
}

@media (max-width:749px) {
  .c4 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (max-width:749px) {
  .c6 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <a
        aria-label="Work on homework: proactive engage web-readiness"
        className="sc-fznKkj c0 task homework viewable"
        data-event-id={1}
        href="/course/1/task/1"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="sc-fznyAO c1"
        >
          <i
            className="c2 icon-homework"
            type="homework"
          />
          <span>
            proactive engage web-readiness
          </span>
        </div>
        <div
          className="sc-fznyAO c3"
        >
          <time>
            Su Oct 15, 7:00am
          </time>
        </div>
        <div
          className="sc-fznyAO c4"
        >
          <div
            className="c5"
          >
            <span
              className="tour-anchor"
              data-tour-anchor-id="assignment-progress-status"
            >
              1/10 completed
            </span>
          </div>
        </div>
        <div
          className="sc-fznyAO c6"
        >
          <div
            className="c5"
          >
            5.0
          </div>
        </div>
      </a>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;

exports[`Homework Row renders with completed count 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  height: 100%;
  width: 4rem;
  margin-right: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-repeat: no-repeat;
  background-position: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0 6rem 0 1rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 i {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 span {
  word-break: break-all;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 18rem;
  padding-right: 1rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 15.5rem;
  padding-right: 1rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-right: 1rem;
  width: 8rem;
}

.c6 svg.fa-star {
  padding: 3px;
}

.c0 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
}

@media (max-width:749px) {
  .c1 {
    min-width: 100%;
  }
}

@media (max-width:749px) {
  .c3 {
    padding-left: 1.2rem;
  }
}

@media (max-width:749px) {
  .c4 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (max-width:749px) {
  .c6 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <a
        aria-label="Work on homework: rich reintermediate e-business"
        className="sc-fznKkj c0 task homework viewable"
        data-event-id={2}
        href="/course/2/task/2"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="sc-fznyAO c1"
        >
          <i
            className="c2 icon-homework"
            type="homework"
          />
          <span>
            rich reintermediate e-business
          </span>
        </div>
        <div
          className="sc-fznyAO c3"
        >
          <time>
            Sa Oct 14, 7:00am
          </time>
        </div>
        <div
          className="sc-fznyAO c4"
        >
          <div
            className="c5"
          >
            <span
              className="tour-anchor"
              data-tour-anchor-id="assignment-progress-status"
            >
              2/8 completed
            </span>
          </div>
        </div>
        <div
          className="sc-fznyAO c6"
        >
          <div
            className="c5"
          >
            6.0
          </div>
        </div>
      </a>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;
